fixed nav and horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .center{
     text-align: center;
 }
